# Visual_Pattern_Recognition-Practice_9-8_semester

./: CMakeLists.txt  main.cpp
